[package]
name = "xmlem"
description = "XML DOM implementation with pretty printing"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
version = "0.1.3"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bbqsrc/xmlem"
categories = ["encoding", "data-structures"]
keywords = ["xml", "dom", "mlem", "css"]

[dependencies]
cssparser = "0.28.1"
indexmap = "1.8.1"
once_cell = "1.10.0"
quick-xml = "0.22.0"
selectors = "0.23.0"
slotmap = "1.0.6"
unic-ucd = "0.9.0"
qname = "0.1.0"
# url = "2.2.2"
