[package]
name = "xmlem"
description = "XML DOM implementation with pretty printing"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
version = "0.2.2"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bbqsrc/xmlem"
categories = ["encoding", "data-structures"]
keywords = ["xml", "dom", "mlem", "css"]

[dependencies]
cssparser = "0.28.1"
indexmap = "1.9.2"
once_cell = "1.17.1"
qname = "0.1.0"
quick-xml = "0.27.1"
selectors = "0.23.0"
slotmap = "1.0.6"
tracing = "0.1.37"
unic-ucd = "0.9.0"
